--- a/css/styles.css
+++ b/css/styles.css
@@ -64,17 +64,17 @@ p {
 
 ul {
     display: flex;
-    flex-flow: wrap;
-    justify-content: center;
+    flex-flow: column;
+    align-items: center;
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
 li {
     width: 70%;
-    max-width: 450px;
-    margin: 3px;
+    max-width: 420px;
+    margin: 5px;
 }
 
 footer {
@@ -121,6 +121,12 @@ footer {
     }
     #profile {
         flex-direction: row-reverse;
+    }
+
+    ul {
+        flex-flow: wrap;
+        justify-content: center;
+        align-items: center;
     }
 
     #bottom_nav {
