--- a/css/styles.css
+++ b/css/styles.css
@@ -81,17 +81,16 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
     width: 100%;
     margin: 0;
-    padding-top: 4px;
+    padding: 4px;
     background-color: rgb(250,250,250);
 }
 
 .messaging {
     display: flex;
-    justify-content: space-evenly;
-    padding: 0 20%;
+    justify-content: space-around;
+    width: 215px;
 }
 
 .info {
