--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ p {
 
 .portfolio_image {
     width: 100%;
+    transition: .2s;
 }
 
 ul {
@@ -137,6 +138,11 @@ footer {
     li {
         width: 46%;
         height: 400px;
+    }
+
+    .portfolio_image:hover {
+        transform: scale(1.05);
+        transition: .2s;
     }
 
     #bottom_nav {
