--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/* * {
+    border: 1px solid red;
+} */
+
 body {
     margin: 0;
     overflow-x: hidden;
@@ -8,9 +12,12 @@ header {
     display: flex;
     flex-flow: column;
     text-align: center;
+    align-items: center;
     background-color: rgb(250,250,250);
     padding: 0 3%;
 }
+
+
 
 nav {
     display: flex;
@@ -103,7 +110,7 @@ footer {
     border-top: 1px solid lightgray;
 }
 
-#profile {
+[id="profile"] {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -111,7 +118,8 @@ footer {
     background-color: rgb(250,250,250);
 }
 
-#portfolio, #skills {
+main div:nth-child(2), 
+main div:nth-last-of-type(1) {
     padding: 0 5%;
 }
 
